# delivery

./: .dockerignore  .gitignore  Makefile  pyproject.toml
docker/: Dockerfile  docker-compose-base.yml  docker-compose-local.yml
envs/: .env.example
src/application/commands/customers/: register_customer_handler.py  (+1 more)
src/bootstrap/: app_factory.py  celery_app.py  ioc.py  logging_config.py  settings.py
src/domain/: errors.py
src/domain/entities/: base.py  business_entity.py  category_entity.py  courier_entity.py  courier_location_history_entity.py  customer_address_entity.py  customer_entity.py  delivery_entity.py  delivery_status_history_entity.py  location_entity.py  menu_section_entity.py  order_entity.py  order_item_entity.py  order_status_history.py  otp_entity.py  product_entity.py  shop_entity.py  shop_product_entity.py  shop_work_hours_entity.py
src/domain/enums/: account_status.py  actor_type.py  change_status_reason.py  city.py  delivery_status.py  delivery_type.py  inventory_type.py  order_status.py  otp_purpose_type.py
src/domain/policies/: otp_policy.py  password_policy.py
src/domain/ports/: i_customer_repository.py  i_email_sender.py  i_hasher.py  i_otp_repository.py
src/domain/services/: otp_generator.py
src/domain/value_objects/: common.py  otp_vo.py
src/infrastracture/cache/: redis_client.py
src/infrastracture/celery_tasks/: email_tasks.py
src/infrastracture/messaging/: email_sender.py
src/infrastracture/security/: password_hasher.py
src/presentation/rest/: error_handler.py  middlewares.py
src/setup/: settings.py
(+13 files in other folders)
