[project]
name = "delivery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "dishka>=1.8.0",
    "pydantic-settings>=2.13.1",
    "sqlalchemy[asyncio]>=2.0.46",
    "structlog>=25.5.0",
]
